[package]
name = "test-massa"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.22.0", features = ["full"] }
serde = { version = "1.0.148", features = ["derive"] }
serde_json = "1.0.89"
thiserror = "1.0.37"
log = "0.4.17"
chrono = "0.4.23"

[[bin]]
name = "test-massa"
path = "src/main.rs"
